connect database, develop structure /purchase page, develop /status page

--- a/cripto_move/templates/index.html
+++ b/cripto_move/templates/index.html
@@ -3,6 +3,7 @@
 
     <h2>response about resquests</h2>
     <h1>{{msg}}</h1>
+    <h1>{{reg}}</h1>
     <ul>
         
             <li>JSON response : {{r_JSON}}</li>
