--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block pageBase %}
 
-<h1>Cryptocurrency status</h1>
+<h1>investment status </h1>
+<p>invested       ........</p>
+<p>recovered      ........</p>
+<p>purchase value ........</p>
+<p>current value  ........</p>
+<button style="width: 20%;">Back</button>
+
 
 {% endblock %}
