--- a/cripto_move/templates/purchase.html
+++ b/cripto_move/templates/purchase.html
@@ -2,5 +2,34 @@
 {% block pageBase %}
 
 <h1>Purchase of cryptocurrencies</h1>
+<div style="display: flex;">
+    <div style="width: 50%;">
+      <form action="form1">
+        <label for="combo_from">From:</label>
+        <select id="combo_from" style="width: 30%">
+          <option value="EUR">EUR</option>
+          <option value="ETH">ETH</option>
+          <option value="BNB">BNB</option>
+          <option value="ADA">ADA</option>
+          <option value="DOT">DOT</option>
+          <option value="BTC">BTC</option>
+        </select>
+        <button style="width: 10%;">Calc</button>
+      </form>
+    </div>
+    <div style="width: 50%;">
+      <form action="form2">
+        <label for="combo_to">To:</label>
+        <select id="combo_to" style="width: 30%">
+          <option value="EUR">EUR</option>
+          <option value="ETH">ETH</option>
+          <option value="ADA">ADA</option>
+          <option value="DOT">DOT</option>
+          <option value="BTC">BTC</option>
+        </select>
+      </form>
+    </div>
+  </div>
+  
 
 {% endblock %}
