--- a/cripto_move/templates/base.html
+++ b/cripto_move/templates/base.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cryptocurrency movement</title>
-    <link rel="stylesheet" href="/static/css/pico.css">
-    <link rel="stylesheet" href="/static/css/styles.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            Crypto move
-        </div>
-        
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Cryptocurrency movement</title> 
+    <link rel="stylesheet" href="/static/css/pico.css"> 
+    <link rel="stylesheet" href="/static/css/styles.css"> 
+</head> 
+<body> 
+    <header> 
+        <div class="container fixed-anchor"> 
+            <a href="/">Inicio</a>/<a href="/purchase">Compra</a>/<a href="/status">Status</a> 
+        </div> 
+         
     </header>
     <section class="container">
-       {% block pageBase%} {# aquí irá mi plantilla html #}
-
-       {% endblock %}
-    </section>
-    <footer>
-        <div class="container">
-            &copy; 2023 all rights reserved
-        </div>
-    </footer>
-</body>
-</html>
+       {% block pageBase%} {# here will go my HTML template #}
+ 
+       {% endblock %} 
+    </section> 
+    <footer> 
+        <div class="container"> 
+            &copy; 2023 all rights reserved 
+        </div> 
+    </footer> 
+</body> 
+</html> 
