--- a/cripto_move/static/css/styles.css
+++ b/cripto_move/static/css/styles.css
@@ -23,3 +23,16 @@ ul.flashes{
     font-weight: bold;
     font-size: 0.9em;
 }
+
+
+.fixed-anchor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #a50b0b;
+    padding: 10px;
+    z-index: 9999;
+}
+.fixed-anchor a {
+    margin-right: 10px;
+}
