--- a/cripto_move/templates/base.html
+++ b/cripto_move/templates/base.html
@@ -10,9 +10,13 @@
 </head> 
 <body> 
     <header> 
-        <div class="container fixed-anchor"> 
-            <a href="/">Inicio</a>/<a href="/purchase">Compra</a>/<a href="/status">Status</a> 
-        </div> 
+        <nav aria-label="breadcrumb" class="container">
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/purchase">Purchase</a></li>
+              <li><a href="/status">Status</a></li>             
+            </ul>
+          </nav>
          
     </header>
     <section class="container">
