--- a/cripto_move/templates/index.html
+++ b/cripto_move/templates/index.html
@@ -1,20 +1,6 @@
 {% extends "base.html" %}
 {% block pageBase %}
-
-    <h2>response about resquests</h2>
-    <h1>{{msg}}</h1>
-    <h1>{{reg}}</h1>
-    <ul>
-        
-            <li>JSON response : {{r_JSON}}</li>
-            <li>JSON time : {{r_JSON.time}}</li>
-            <li>JSON asset_id_base : {{r_JSON.asset_id_base}}</li>
-            <li>JSON asset_id_quote : {{r_JSON.asset_id_quote}}</li>
-            <li>JSON rate : {{r_JSON.rate}}</li>
-       
-    </ul>      
-
-
+<h1>cryptocurrency movement</h1>
     <table style="width:100%">
         <thead> 
             <tr>
@@ -28,14 +14,14 @@
             </tr>
         </thead>
         <tbody>
-        {% for item in data %}
+        {% for item in reg %}
             <tr>                
                 <td>{{item.date}}</td>
                 <td>{{item.time}}</td>
-                <td>{{item.from}}</td>
-                <td>{{item.q}}</td>
-                <td>{{item.to}}</td>
-                <td>{{item.q1}}</td>
+                <td>{{item.moneda_from}}</td>
+                <td>{{item.cantidad_from}}</td>
+                <td>{{item.moneda_to}}</td>
+                <td>{{item.cantidad_to}}</td>
                 <td>{{item.PU}}</td>
             </tr>
         {% endfor %}
