--- a/cripto_move/templates/index.html
+++ b/cripto_move/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block pageBase %}
 <h1>cryptocurrency movement</h1>
+{{msg}}
     <table style="width:100%">
         <thead> 
             <tr>
