--- a/cripto_move/templates/purchase.html
+++ b/cripto_move/templates/purchase.html
@@ -2,34 +2,38 @@
 {% block pageBase %}
 
 <h1>Purchase of cryptocurrencies</h1>
-<div style="display: flex;">
-    <div style="width: 50%;">
+<div style="display: flex; justify-content: space-between;">
+    <div style="width: 30%;">
       <form action="form1">
-        <label for="combo_from">From:</label>
-        <select id="combo_from" style="width: 30%">
-          <option value="EUR">EUR</option>
-          <option value="ETH">ETH</option>
-          <option value="BNB">BNB</option>
-          <option value="ADA">ADA</option>
-          <option value="DOT">DOT</option>
-          <option value="BTC">BTC</option>
-        </select>
-        <button style="width: 10%;">Calc</button>
+               
+        <label for="from">From</label>
+          <select id="from_to" name="from_to" required>  
+            <option value="0">EUR</option>
+            {# if base de datos hay monedas, #}
+            {# Aquí hago un for #}                
+          </select>   
+
+          <label for="q" style="display: flex; align-items: center;"> Q
+            
+            <input type="text" id="q" name="q" placeholder="Q" required>
+          </label>
+
+          <button style="margin-left: 20px; width: 40px; height: 40px;">C</button>
+         
+
+    </div>
+
+    <div style="width: 30%;">
+          <label for="to">To</label>
+          <select id="to" name="to" required>           
+            {% for item in crypto_diccion %}
+              <option value="{{item.id}}">{{item.name}}</option>
+            {% endfor %}                   
+          </select>  
+
+        
       </form>
     </div>
-    <div style="width: 50%;">
-      <form action="form2">
-        <label for="combo_to">To:</label>
-        <select id="combo_to" style="width: 30%">
-          <option value="EUR">EUR</option>
-          <option value="ETH">ETH</option>
-          <option value="ADA">ADA</option>
-          <option value="DOT">DOT</option>
-          <option value="BTC">BTC</option>
-        </select>
-      </form>
-    </div>
-  </div>
-  
+</div>
 
 {% endblock %}
