--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -6,7 +6,7 @@
 <p>recovered      ........</p>
 <p>purchase value ........</p>
 <p>current value  ........</p>
-<button style="width: 20%;">Back</button>
+<button style="width: 10%;">OK</button>
 
 
 {% endblock %}
