--- a/cripto_move/templates/index.html
+++ b/cripto_move/templates/index.html
@@ -23,7 +23,7 @@
                 <td>{{item.cantidad_from}}</td>
                 <td>{{item.moneda_to}}</td>
                 <td>{{item.cantidad_to}}</td>
-                <td>{{item.PU}}</td>
+                <td>{{item.cantidad_from / item.cantidad_to}}</td>
             </tr>
         {% endfor %}
         </tbody>
