--- a/cripto_move/templates/purchase.html
+++ b/cripto_move/templates/purchase.html
@@ -2,50 +2,52 @@
 {% block pageBase %}
 
 <h1>Purchase of cryptocurrencies</h1>
-{{resp_request}}
-<br>fromselect   -> {{resp_request.from_select}}
-<br>from input q -> {{resp_request.from_input_q}}
-<br>to select    -> {{resp_request.to_select}}
-<br>to label q   -> {{resp_request.to_labl_q}}
-<br>to label pu  -> {{resp_request.to_label_pu}} <br>
-<br>Todas las cripto son {{all_cryp}} <br>
-<br> mis cripto son : {{my_cripto}}
 
-<div style="display: flex; justify-content: space-between;">
-    <div style="width: 90%;">
-        <form action="/purchase" method="POST">
-            <div class="grid">
-                <div>
-                    <label for="from">From</label>
-                    <select name="from_select">
-                        <option value="0">EUR</option>                             
-                            {% for item in my_cripto %}
-                                <option value="{{ item }}">{{ item }}</option>                
-                            {% endfor %}                                 
-                    </select>     
-                    <label for="q">Q</label><br>
-                    <input type="text" name="from_input_q" placeholder="Insert money" required value="{{resp_request.from_input_q}}">
-                </div>
-                <div>          
-                    <label for="to">To</label>
-                    <select name="to_select" value="{{ resp_request.to_select }}" required>                     
-    
-                        {% for item in all_cryp %}
-                            <option value="{{ item }}" required >{{ item }}</option>
-                        {% endfor %}                   
-                        <option value="{{ pre_to }}" required >{{ pre_to }}</option>
-                    </select>        
-                    <br>                  
-                   
-                    Q __<span>{{ resp_request.to_labl_q }}</span><br>
-                    P.U: __<span>{{ resp_request.to_label_pu }}</span><br>
-
-                    <div><input type="submit" name="button" value="save" style="margin-left: 20px; width: 70px; height: 70px;"></div>                    
-                  </div>
-            </div>             
-            <input type="submit" name="button" value="calculate" style="margin-left: 20px; width: 70px; height: 70px;">
-        </form>
+<form action="/purchase" method="POST">
+  <div class="form-columns">
+    <div class="form-column">
+      <label for="from">
+        From 
+        <select name="from_select" value="{{request.from_select}}" placeholder="{{pre_from}}" required style="width: 30%;">
+          {% for item in my_crypto_list %}
+          <option value="{{item}}">{{item}}</option>
+          {% endfor %}
+          <option value="{{pre_from}}" selected>{{pre_from}}</option>
+        </select>
+      </label>
+      
+      <label for="q_to">
+        q : 
+        <input value="{{q_to}}" type="number"  id="cantidad" name="quantity" placeholder="{{q_to}}" required style="width: 30%;">
+      </label>
+      
+      <input type="submit" name="button" value="calculate" class="secondary" style="width: 10%;">
     </div>
-</div>
+    
+    <div class="form-column">
+      <label for="to">
+        To
+        <select name="to_select" value="{{request.to_select}}" required style="width: 30%;">
+          {% for item in all_crypt_list %}
+          <option value="{{item}}" required>{{item}}</option>
+          {% endfor %}
+          <option value="{{pre_to}}" selected>{{pre_to}}</option>
+        </select>
+      </label>
+      
+      <label for="Q">
+        rate
+        <input value="{{quantity_coins}}" type="text"  id="precompra" name="quantity_change" placeholder="{{quantity_coins}}" readonly style="width: 30%;">
+      </label>
+
+      <label for="pu">
+        PU
+        <label value="{{unit_price}}" type="text"  id="unit_price" name="unit_price" placeholder="{{unit_price}}" readonly style="width: 30%;"></label>
+      </label>
+      
+      <input type="submit" name="button" value="save" style="width: 10%;">
+    </div>
+  </div>
+</form>
 
 {% endblock %}
