--- a/cripto_move/templates/index.html
+++ b/cripto_move/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block pageBase %}
 <h1>cryptocurrency movement</h1>
-{{message}}
+
+<h2> {{message}} </h2>
 
     <table style="width:100%">
         <thead> 
