--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -2,7 +2,9 @@
 {% block pageBase %}
 
 <h1>investment status </h1>
-<p>invested       ........</p>
+recuperado  :  <br> <br>
+
+<p>invested       ........  {{invested}}  </p>
 <p>recovered      ........</p>
 <p>purchase value ........</p>
 <p>current value  ........</p>
