add recovered, add current_value_euros, and /status

--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -5,8 +5,8 @@
 recuperado  :  <br> <br>
 
 <p>invested       ........  {{invested}}  </p>
-<p>recovered      ........</p>
-<p>purchase value ........</p>
+<p>recovered      ........  {{recover_e}} </p>
+<p>purchase value ........  {{purch_v}} </p>
 <p>current value  ........</p>
 <button style="width: 10%;">OK</button>
 
