--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -6,7 +6,7 @@ recuperado  :  <br> <br>
 
 <p>invested       ........  {{invested}}  </p>
 <p>recovered      ........  {{recover_e}} </p>
-<p>purchase value ........  {{purch_v}} </p>
+<p>purchase value ........  {{purchase_va}} </p>
 <p>current value  ........</p>
 <button style="width: 10%;">OK</button>
 
