--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -2,13 +2,12 @@
 {% block pageBase %}
 
 <h1>investment status </h1>
-recuperado  :  <br> <br>
+
 
 <p>invested       ........  {{invested}}  </p>
-<p>recovered      ........  {{recover_e}} </p>
+<p>recovered      ........  {{recover_str}} </p>
 <p>purchase value ........  {{purchase_va}} </p>
 <p>current value  ........</p>
 <button style="width: 10%;">OK</button>
-
 
 {% endblock %}
