last changes /status

--- a/cripto_move/templates/purchase.html
+++ b/cripto_move/templates/purchase.html
@@ -18,7 +18,7 @@
       
       <label for="q_to">
         Quantity (q) "Cuantas monedas 'from to' quiero comprar": 
-        <input value="{{q_to}}" type="number"  id="cantidad" name="quantity" placeholder="{{q_to}}" required style="width: 100%;">
+        <input value="{{q_to}}" step="0.0000001" type="number"  id="cantidad" name="quantity" placeholder="{{q_to}}" required style="width: 100%;">
       </label>
       
       <input type="submit" name="button" value="calculate" class="secondary" style="width: 100%;">
