--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -4,10 +4,12 @@
 <h1>investment status </h1>
 
 
-<p>invested       ........  {{invested}}  </p>
-<p>recovered      ........  {{recover_str}} </p>
-<p>purchase value ........  {{purchase_va}} </p>
+<p>invested       ........  {{invested}}  € </p>
+<p>recovered      ........  {{recover}}   € </p>
+<p>purchase value ........  {{purchase_va}} € </p>
 <p>current value  ........</p>
-<button style="width: 10%;">OK</button>
+
+
+<button onclick="window.location.href = '/purchase';">OK</button>
 
 {% endblock %}
