--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -10,6 +10,6 @@
 <p>current value  ........</p>
 
 
-<button onclick="window.location.href = '/purchase';">OK</button>
+<button onclick="window.location.href = '/purchase';" style="width: 30%;">OK</button>
 
 {% endblock %}
