--- a/cripto_move/templates/purchase.html
+++ b/cripto_move/templates/purchase.html
@@ -1,14 +1,38 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type='text/javascript'>
+  $(window).load(function(){
+  var valorToSelect = document.getElementById("to_select").value;
+
+   if(valorToSelect !='Select cryptocurrency') {        
+        document.getElementById("btBuy").disabled = false;
+      } 
+
+    $('#to_select').change(function() {
+      if($(this).val() !='Select cryptocurrency') {        
+        document.getElementById("btBuy").disabled = false;
+        document.getElementById("btCalculate").disabled = false;
+        
+      } else {
+        document.getElementById("btBuy").disabled = true;
+        document.getElementById("btCalculate").disabled = true;
+      }   
+    });
+  });
+  
+  </script>
+
+
 {% extends "base.html" %}
 {% block pageBase %}
 
 <h1>Purchase of cryptocurrencies</h1>
 {{fecha}}
 <form action="/purchase" method="POST">
-  <div class="form-columns">
-    <div class="form-column" style="float: left; width: 50%;">
+  <div>
+    <div class="form-column" >
       <label for="from">
         From 
-        <select name="from_select" value="{{request.from_select}}" placeholder="{{pre_from}}" required style="width: 100%;">
+        <select id="from_select" name="from_select" value="{{request.from_select}}" placeholder="{{pre_from}}" required style="width: 100%;">
           {% for item in my_crypto_list %}
           <option value="{{item}}">{{item}}</option>
           {% endfor %}
@@ -21,13 +45,13 @@
         <input value="{{q_to}}" step="0.0000001" type="number"  id="cantidad" name="quantity" placeholder="{{q_to}}" required style="width: 100%;">
       </label>
       
-      <input type="submit" name="button" value="calculate" class="secondary" style="width: 100%;">
+      <input type="submit"  id="btCalculate" name="button" value="calculate" class="buttonCripto" disabled>
     </div>
     
-    <div class="form-column" style="float: left; width: 50%;">
+    <div class="form-column" >
       <label for="to">
         To
-        <select name="to_select" value="{{request.to_select}}" required style="width: 100%;">
+        <select id="to_select" name="to_select" value="{{request.to_select}}" required style="width: 100%;">
           {% for item in all_crypt_list %}
           <option value="{{item}}" required>{{item}}</option>
           {% endfor %}
@@ -45,9 +69,11 @@
         <input value="{{unit_price}}" type="text"  id="unit_price" name="unit_price" placeholder="{{unit_price}}" readonly style="width: 100%;">
       </label>
       Buy
-      <input type="submit" name="button" value="save" style="width: 100%;">
+      <input id="btBuy" type="submit" name="button" class="buttonCripto" value="save" disabled>
     </div>
   </div>
 </form>
 
+
 {% endblock %}
+
