--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -10,6 +10,14 @@
 <p>current value  ........</p>
 
 
-<button onclick="window.location.href = '/purchase';" style="width: 30%;">OK</button>
+<div class="button-container"></div>
+    <button onclick="window.location.href = '/purchase';" style="width: 15%;" class="purchase_button">purchase</button>
+    <button onclick="window.location.href = '/';" style="width: 15%;" class="index_button">Index</button>
+</div>
 
 {% endblock %}
+
+
+
+
+  
