--- a/cripto_move/templates/base.html
+++ b/cripto_move/templates/base.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html> 
 <html lang="en"> 
-<head> 
-    <meta charset="UTF-8"> 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<head>  
+    <meta charset="UTF-8">  
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Cryptocurrency movement</title> 
+
     <link rel="stylesheet" href="/static/css/pico.css"> 
     <link rel="stylesheet" href="/static/css/styles.css"> 
     <link rel="stylesheet" href="/static/css/cripto.css">
 
-    <script type='text/javascript'>
-        $(window).load(function(){
-        var valorToSelect = document.getElementById("to_select").value;
-      
-         if(valorToSelect !='Select cryptocurrency') {        
-              document.getElementById("btBuy").disabled = false;
+    <script type='text/javascript'> 
+        $(window).load(function(){ 
+        var valorToSelect = document.getElementById("to_select").value;        
+         if(valorToSelect !='Select cryptocurrency') {         
+              document.getElementById("btBuy").disabled = false; 
             } 
-      
-          $('#to_select').change(function() {
-            if($(this).val() !='Select cryptocurrency') {        
-              document.getElementById("btBuy").disabled = false;
-              document.getElementById("btCalculate").disabled = false;
-              
-            } else {
-              document.getElementById("btBuy").disabled = true;
-              document.getElementById("btCalculate").disabled = true;
-            }   
-          });
-        });
-        
-        </script>
-</head> 
-<body> 
-    <header> 
-        <nav aria-label="breadcrumb" class="container">
-            <ul>
-              {% if breadcrumb == "index" %}
-              <li><u class="breadcrumb-item" style="cursor: pointer;">index </u> </li>
-              {% else %}
-              <li><a href="/" >index</a></li>
-              {% endif %}
 
-              {% if breadcrumb == "purchase" %}
-              <li><u class="breadcrumb-item" style="cursor: pointer;">purchase </u> </li>
-              {% else %}
-              <li><a href="/purchase" >purchase</a></li>
-              {% endif %}
+          $('#to_select').change(function() { 
+            if($(this).val() !='Select cryptocurrency') {         
+              document.getElementById("btBuy").disabled = false; 
+              document.getElementById("btCalculate").disabled = false; 
+               
+            } else { 
+              document.getElementById("btBuy").disabled = true; 
+              document.getElementById("btCalculate").disabled = true; 
+            }    
+          }); 
+        }); 
+         
+        </script> 
+</head>  
+<body>  
+    <header>  
+        <nav aria-label="breadcrumb" class="container"> 
+            <ul> 
+              <li> 
+                {% if breadcrumb == "index" %} 
+                <u class="breadcrumb-item" >index </u> 
+                {% else %} 
+                <a href="/" >index</a> 
+                {% endif %} 
+              </li>          
+ 
+              <li> 
+                {% if breadcrumb == "purchase" %} 
+                <u class="breadcrumb-item" >purcahse </u> 
+                {% else %} 
+                <a href="/purchase" >purchase</a> 
+                {% endif %} 
+              </li> 
+ 
+              <li> 
+                {% if breadcrumb == "status" %}
+                <u class="breadcrumb-item" >status </u>
+                {% else %}
+                <a href="/status" >status</a>
+                {% endif %}
+              </li>
 
-              {% if breadcrumb == "status" %}
-              <li><u class="breadcrumb-item" style="cursor: pointer;">status </u> </li>
-              {% else %}
-              <li><a href="/status" >status</a></li>
-              {% endif %}           
             </ul>
-          </nav>
+        </nav>
          
     </header>
     <section class="container">
