--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -3,19 +3,22 @@
 
 <h1>investment status </h1>
 
-
 <p>invested       ........  {{invested}}  € </p>
 <p>recovered      ........  {{recover}}   € </p>
 <p>purchase value ........  {{purchase_va}} € </p>
-<p>current value  ........</p>
-
-
-<div class="button-container"></div>
+<p>current value  ........  {{ganancia_cripto}}</p>
+ 
+ 
+<div class="button-container"></div> 
     <button onclick="window.location.href = '/purchase';" style="width: 15%;" class="purchase_button">purchase</button>
     <button onclick="window.location.href = '/';" style="width: 15%;" class="index_button">Index</button>
-</div>
-
+</div> 
+ 
 {% endblock %}
+
+
+
+
 
 
 
