--- a/cripto_move/templates/status.html
+++ b/cripto_move/templates/status.html
@@ -6,21 +6,21 @@
 <p>invested       ........  {{invested}}  € </p>
 <p>recovered      ........  {{recover}}   € </p>
 <p>purchase value ........  {{purchase_va}} € </p>
-<p>current value  ........  {{ganancia_cripto}}</p>
- 
+<p>current value  ........  {{crypto_gain}}</p>
+
  
 <div class="button-container"></div> 
-    <button onclick="window.location.href = '/purchase';" style="width: 15%;" class="purchase_button">purchase</button>
-    <button onclick="window.location.href = '/';" style="width: 15%;" class="index_button">Index</button>
+    <button onclick="window.location.href = '/purchase';" style="width: 30%;" class="purchase_button">purchase</button>
+    <button onclick="window.location.href = '/';" style="width: 30%;" class="index_button">Index</button>
 </div> 
  
 {% endblock %}
+ 
 
-
-
-
-
-
+   
+  
+  
+   
 
 
   
